Updated param sweep method to actually use given topo rate

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 output/dataframes/*
 output/stdout/*
 
+# Output images/files
+*.svg
+*.pdf
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
