--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ ipython==7.17.0
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
 jedi==0.17.2
-Jinja2==2.11.2
+Jinja2==2.11.3
 jsonschema==3.2.0
 jupyter==1.0.0
 jupyter-client==6.1.6
@@ -45,7 +45,7 @@ param==1.9.3
 parso==0.7.1
 pathos==0.2.7
 pickleshare==0.7.5
-Pillow==7.2.0
+Pillow>=8.1.1
 pox==0.2.9
 ppft==1.6.6.3
 prometheus-client==0.8.0
@@ -59,7 +59,7 @@ pyrsistent==0.16.0
 python-dateutil==2.8.1
 pytz==2020.1
 pyviz-comms==0.7.6
-PyYAML==5.3.1
+PyYAML==5.4
 pyzmq==19.0.2
 qtconsole==4.7.5
 QtPy==1.9.0
