Updated movie writer notebook with five good examples

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ output/stdout/*
 output/flow/2021.03.29
 output/julia*
 output/flow/*
+output/*.mp4
 ouput/julia_summaries/*
 
 # Output images/files
