Updated Manifest with packages needed for plotting 10.521 model
Bumped package versions and added StochasticToggleModel submodule

Bump pillow from 8.2.0 to 8.3.2

Bumps [pillow](https://github.com/python-pillow/Pillow) from 8.2.0 to 8.3.2.
- [Release notes](https://github.com/python-pillow/Pillow/releases)
- [Changelog](https://github.com/python-pillow/Pillow/blob/master/CHANGES.rst)
- [Commits](https://github.com/python-pillow/Pillow/compare/8.2.0...8.3.2)

---
updated-dependencies:
- dependency-name: pillow
  dependency-type: direct:production
...

Signed-off-by: dependabot[bot] <support@github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ output/julia*
 output/flow/*
 output/*.mp4
 ouput/julia_summaries/*
+output/s2_julia_summaries/*
+output/s2_summaries_revised_range/*
 .vscode
 
 
@@ -14,6 +16,7 @@ ouput/julia_summaries/*
 *.svg
 *.pdf
 *.png
+*.h5
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
