--- a/Project.toml
+++ b/Project.toml
@@ -4,8 +4,11 @@ authors = ["Christopher Johnstone <meson800@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+DiffEqJump = "c894b116-72e5-5b58-be3c-e6d8d4ac2b12"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 FiniteDiff = "6a86dc24-6348-571c-b903-95158fe2bd41"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 MultiScaleArrays = "f9640e96-87f6-5992-9c3b-0743c6a49ffa"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
