--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ DiffEqJump = "c894b116-72e5-5b58-be3c-e6d8d4ac2b12"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 FiniteDiff = "6a86dc24-6348-571c-b903-95158fe2bd41"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
+Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 MultiScaleArrays = "f9640e96-87f6-5992-9c3b-0743c6a49ffa"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 RandomNumbers = "e6cf234a-135c-5ec9-84dd-332b85af5143"
